@startuml

title __TEMPLATEMETHOD's Class Diagram__\n

  namespace org.example {
    namespace behavioral.templatemethod {
      abstract class org.example.behavioral.templatemethod.Payment {
          + makePayment()
          {abstract} ~ endPayment()
          {abstract} ~ initialize()
          {abstract} ~ startPayment()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.templatemethod {
      class org.example.behavioral.templatemethod.Paypal {
          ~ endPayment()
          ~ initialize()
          ~ startPayment()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.templatemethod {
      class org.example.behavioral.templatemethod.Visa {
          ~ endPayment()
          ~ initialize()
          ~ startPayment()
      }
    }
  }
  

  org.example.behavioral.templatemethod.Paypal -up-|> org.example.behavioral.templatemethod.Payment
  org.example.behavioral.templatemethod.Visa -up-|> org.example.behavioral.templatemethod.Payment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
